src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/LeadInteractionFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Lead Interaction Field Mapping</label>
    <pluralLabel>Lead Interaction Fields Mapping</pluralLabel>
</CustomObject>