src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/fields/LeadField__c.field-meta.xml
<CustomField>
    <fullName>LeadField__c</fullName>
    <label>Lead Field</label>
    <metadataRelationshipControllingField>LeadInteractionFieldMapping__mdt.LeadObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Lead_Interaction_Fields_Mapping1</relationshipLabel>
    <relationshipName>Lead_Interaction_Fields_Mapping1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>