src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/fields/LeadInteractionField__c.field-meta.xml
<CustomField>
    <fullName>LeadInteractionField__c</fullName>
    <label>Lead Interaction Field</label>
    <metadataRelationshipControllingField>LeadInteractionFieldMapping__mdt.LeadInteractionObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Lead_Interaction_Fields_Mapping</relationshipLabel>
    <relationshipName>Lead_Interaction_Fields_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>