src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/fields/LeadInteractionObject__c.field-meta.xml
<CustomField>
    <fullName>LeadInteractionObject__c</fullName>
    <label>Lead Interaction Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Lead Interaction Object Field</relationshipLabel>
    <relationshipName>LeadInteractionObjectField</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>