src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/fields/LeadObject__c.field-meta.xml
<CustomField>
    <fullName>LeadObject__c</fullName>
    <label>Lead Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Lead_Interaction_Fields_Mapping</relationshipLabel>
    <relationshipName>Lead_Interaction_Fields_Mapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>