src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/fields/MergeBehaviour__c.field-meta.xml
<CustomField>
    <fullName>MergeBehaviour__c</fullName>
    <label>Merge Behaviour</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>replace</fullName>
                <default>true</default>
                <label>replace</label>
            </value>
            <value>
                <fullName>append</fullName>
            </value>
            <value>
                <fullName>append_with_headerinfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>