src/global/core-modules/leads-mgmt/lead-interactions/objects/LeadInteractionFieldMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>LeadInteractionField__c</columns>
    <columns>LeadField__c</columns>
    <columns>MergeBehaviour__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>